objects/X7S_Events_Volunteer_Registration__c/X7S_Events_Volunteer_Registration__c.object-meta.xml
<CustomObject>
    <description>Object to support Events Volunteer Registration records as part of the Events accelerator from 7Summits.</description>
    <label>7S Events Volunteer Registration</label>
    <nameField>
        <displayFormat>VolunteerReg-{0000}</displayFormat>
        <label>Volunteer Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>7S Events Volunteer Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>