objects/X7S_Events_Volunteer_Registration__c/fields/Formatted_Name__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Name__c</fullName>
    <formula>User__r.FirstName + &apos; &apos; + User__r.LastName + &apos; &apos; +  Volunteer_Need__r.Name + &apos; to &apos; + Volunteer_Need__r.Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Name</label>
    <type>Text</type>
</CustomField>