objects/X7S_Events_Volunteer_Registration__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X7S_Volunteer_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>