objects/X7S_Events_Volunteer_Registration__c/fields/Volunteer_Need__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Need__c</fullName>
    <label>Volunteer Need</label>
    <referenceTo>X7S_Events_Volunteer_Need__c</referenceTo>
    <relationshipLabel>7S Events Volunteer Registrations</relationshipLabel>
    <relationshipName>X7S_Events_Volunteer_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>