objects/X7S_Events_Volunteer_Registration__c/validationRules/Reached_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Reached_Capacity</fullName>
    <active>true</active>
    <description>The sign up is disabled or not there if the task has reached capacity</description>
    <errorConditionFormula>Volunteer_Need__r.Volunteers_Registered__c &gt;= Volunteer_Need__r.Volunteers_Needed__c</errorConditionFormula>
    <errorMessage>There are already enough volunteers for this task!</errorMessage>
</ValidationRule>